# startwise-app

./: .gitingore  Arduino.cpp  Arduino.h  CONSULTATIONS.cpp  CONSULTATIONS.h  Consultationwindow.cpp  Consultationwindow.h  Consultationwindow.ui  DatabaseConnection.h  EmployeInterface.ui  README.md  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  arduin.cpp  arduin.h  cataloguedialog.cpp  cataloguedialog.h  cataloguedialog.ui  client.cpp  client.h  client.ui  connection.cpp  dashboard.cpp  dashboard.h  dashboard.ui  employe.cpp  employe.h  employeinterface.cpp  employeinterface.h  facerecognizer.cpp  facerecognizer.h  gestion_projet.cpp  gestion_projet.h  gestion_projet.ui  icons.qrc  images.qrc  images1.qrc  login.cpp  login.h  (+22 more)
StartWise2A17-int-gration_final/: CMakeLists.txt  README.md
StartWise2A17-int-gration_final/resources/: styles.qss
StartWise2A17-int-gration_final/src/: arduin.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h
StartWise2A17-int-gration_final/src/database/: database_connection.h
icons/: Marker.qml  map.qml
resources/: reconnaissance_vocale.py
